<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d60e64"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="126dp"
        android:layout_height="114dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:outlineProvider="none"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/loggo2"
        app:tint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="582dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#FFFFFF"
            android:gravity="center|center_horizontal|center_vertical"
            android:paddingTop="0dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etemail"
            android:layout_width="370dp"
            android:layout_height="74dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#FFFFFF"
            android:drawableRight="@drawable/emailasset"
            android:ems="10"
            android:gravity="center|left"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etpasswordsign"
            android:layout_width="370dp"
            android:layout_height="74dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#FFFFFF"
            android:drawableRight="@drawable/baseline_account_circle_24"
            android:ems="10"
            android:gravity="center|left"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="30dp"
            android:backgroundTint="#AF043E"
            android:text="@string/login1"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:clickable="true"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:text="@string/new_user_create_account"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
